fix margin to avoid overlap between content and footer

--- a/media/css/pydici-pdf.css
+++ b/media/css/pydici-pdf.css
@@ -1,4 +1,12 @@
-@page { size: A4; margin: 1cm }
+@page
+{
+    size: A4;
+    margin-left: 10mm;
+    margin-right: 10mm;
+    margin-top: 10mm;
+    margin-bottom: 20mm;
+}
+
 body
 {
     font-size       : 10px;
@@ -8,8 +16,8 @@ footer
     position        : fixed;
     width           : 100%;
     bottom          : 0;
-    margin-bottom   : 0mm;
-    height          : 10mm;
+    margin-bottom   : -15mm;
+    height          : 15mm;
     text-align      : center;
     font-size       : 10px;
 }
